[tool.poetry]
name = "data-visulization"
version = "0.1.0"
description = ""
authors = ["mahmoud-dinah <mahmood.dinah2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
seaborn = "^0.11.1"
matplotlib = "^3.4.2"
pandas = "^1.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
